Add section to config if it did not exist yet

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fe33c700",
+   "id": "c8b7a748",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29e3ffd4",
+   "id": "f9bfa077",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4f4395d",
+   "id": "250ee95d",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b11eeb14",
+   "id": "568bf2a8",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3c371e7",
+   "id": "a377ddff",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "722c6bdc",
+   "id": "b3833319",
    "metadata": {},
    "outputs": [
     {
@@ -105,13 +105,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c66ee20c",
+   "id": "4c354ca3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "WflowParameterSet(input_data=PosixPath('wflow_example_case_nc'), default_config=PosixPath('wflow_example_case_nc/wflow_sbm.ini'))"
+       "WflowParameterSet(input_data=PosixPath('wflow_example_case_nc'), default_config=PosixPath('wflow_example_case_nc/wflow_sbm_NC.ini'))"
       ]
      },
      "execution_count": 2,
@@ -122,7 +122,7 @@
    "source": [
     "parameter_set = ewatercycle.models.wflow.WflowParameterSet(\n",
     "    input_data = Path(\"./wflow_example_case_nc/\"),\n",
-    "    default_config = Path(\"./wflow_example_case_nc/wflow_sbm.ini\"),\n",
+    "    default_config = Path(\"./wflow_example_case_nc/wflow_sbm_NC.ini\"),\n",
     ")\n",
     "parameter_set"
    ]
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e3f1531c",
+   "id": "15b03366",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6a2dddc9",
+   "id": "b0956d8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f654f03e",
+   "id": "ee1eed6c",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "  {'Precipitation': '/P',\n",
        "   'EvapoTranspiration': '/PET',\n",
        "   'Temperature': '/TEMP',\n",
-       "   'Inflow': '/IF'}),\n",
+       "   'Inflow': '/inmaps/IF'}),\n",
        " ('modelparameters', {}),\n",
        " ('run',\n",
        "  {'starttime': '1991-02-01 00:00:00',\n",
@@ -221,8 +221,7 @@
        "   'self.RiverRunoff': 'run.tss',\n",
        "   'self.WaterLevelR': 'lev.tss'}),\n",
        " ('outputtss_1',\n",
-       "  {'samplemap': 'staticmaps/wflow_gauges.map', 'self.ActLeakage': 'lek.tss'}),\n",
-       " ('API', {})]"
+       "  {'samplemap': 'staticmaps/wflow_gauges.map', 'self.ActLeakage': 'lek.tss'})]"
       ]
      },
      "execution_count": 5,
@@ -237,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dea87449",
+   "id": "8dfbbcc4",
    "metadata": {
     "tags": []
    },
@@ -253,14 +252,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e313f850",
+   "id": "51c49611",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_152040/wflow_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_152040'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_153353/wflow_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_153353'))"
       ]
      },
      "execution_count": 7,
@@ -275,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b47826eb",
+   "id": "9290a3c5",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +284,7 @@
        "  {'Precipitation': '/P',\n",
        "   'EvapoTranspiration': '/PET',\n",
        "   'Temperature': '/TEMP',\n",
-       "   'Inflow': '/IF'}),\n",
+       "   'Inflow': '/inmaps/IF'}),\n",
        " ('modelparameters', {}),\n",
        " ('run',\n",
        "  {'starttime': '1995-01-31 00:00:00 GMT',\n",
@@ -344,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b67d79f",
+   "id": "ebe49cf2",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -353,13 +352,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "432130f3",
+   "id": "aa49b9eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_152040/wflow_ewatercycle.ini')"
+       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_153353/wflow_ewatercycle.ini')"
       ]
      },
      "execution_count": 9,
@@ -374,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5ab82871",
+   "id": "f09319ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4aa72fca",
+   "id": "0c651c16",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8cc0a04a",
+   "id": "2db38bce",
    "metadata": {
     "tags": []
    },
@@ -778,13 +777,13 @@
        "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
        "    time       object 1995-01-30 00:00:00\n",
        "Attributes:\n",
-       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-ad809c65-b2fc-44dc-8115-8f2171ba464b' class='xr-array-in' type='checkbox' checked><label for='section-ad809c65-b2fc-44dc-8115-8f2171ba464b' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-faee66cc-b72c-4ddb-bfa4-b44fb4408ab7' class='xr-array-in' type='checkbox' checked><label for='section-faee66cc-b72c-4ddb-bfa4-b44fb4408ab7' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-6ee8df5e-7bab-47d2-b864-1fa8a6792d05' class='xr-section-summary-in' type='checkbox'  checked><label for='section-6ee8df5e-7bab-47d2-b864-1fa8a6792d05' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-85088440-c906-4ce3-be4d-e957888fa2c7' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-85088440-c906-4ce3-be4d-e957888fa2c7' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-66b60726-5233-4a77-8d4d-98be29ae51c9' class='xr-var-data-in' type='checkbox'><label for='data-66b60726-5233-4a77-8d4d-98be29ae51c9' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-1470114a-da1c-45ff-8b5d-0885bdbbb026' class='xr-section-summary-in' type='checkbox'  checked><label for='section-1470114a-da1c-45ff-8b5d-0885bdbbb026' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-f09e7a4f-6d77-44c4-8b65-da91ffeb48fb' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-f09e7a4f-6d77-44c4-8b65-da91ffeb48fb' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-7cc68a45-bf52-4f36-919d-d5c199db5284' class='xr-var-data-in' type='checkbox'><label for='data-7cc68a45-bf52-4f36-919d-d5c199db5284' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
        "        5.447163,  5.48383 ,  5.520497,  5.557163,  5.59383 ,  5.630497,\n",
        "        5.667163,  5.70383 ,  5.740497,  5.777164,  5.81383 ,  5.850497,\n",
        "        5.887163,  5.92383 ,  5.960497,  5.997163,  6.03383 ,  6.070497,\n",
@@ -815,7 +814,7 @@
        "       11.387163, 11.42383 , 11.460497, 11.497164, 11.53383 , 11.570497,\n",
        "       11.607163, 11.64383 , 11.680496, 11.717163, 11.75383 , 11.790497,\n",
        "       11.827164, 11.86383 , 11.900496, 11.937163, 11.97383 , 12.010497,\n",
-       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-b6ba9560-4011-421a-b949-e6cb0ef9d00e' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b6ba9560-4011-421a-b949-e6cb0ef9d00e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-7fe45840-6504-433c-89e4-9b18f9a672b2' class='xr-var-data-in' type='checkbox'><label for='data-7fe45840-6504-433c-89e4-9b18f9a672b2' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
+       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-246555ba-5443-4888-ba49-3ff54930f317' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-246555ba-5443-4888-ba49-3ff54930f317' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f8153b85-7dab-494e-b3b3-c159b4bbb012' class='xr-var-data-in' type='checkbox'><label for='data-f8153b85-7dab-494e-b3b3-c159b4bbb012' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
        "       46.114265, 46.150932, 46.187599, 46.224266, 46.260933, 46.2976  ,\n",
        "       46.334267, 46.370934, 46.4076  , 46.444267, 46.480934, 46.517601,\n",
        "       46.554268, 46.590935, 46.627602, 46.664268, 46.700932, 46.737598,\n",
@@ -843,7 +842,7 @@
        "       51.394268, 51.430935, 51.467602, 51.504265, 51.540932, 51.577599,\n",
        "       51.614265, 51.650932, 51.687599, 51.724266, 51.760933, 51.7976  ,\n",
        "       51.834267, 51.870934, 51.9076  , 51.944267, 51.980934, 52.017601,\n",
-       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-e77ac2a0-3eb2-4545-8989-79b09c02f529' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e77ac2a0-3eb2-4545-8989-79b09c02f529' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a5662e7d-d9a7-4555-b4f6-4f03a0f0d47e' class='xr-var-data-in' type='checkbox'><label for='data-a5662e7d-d9a7-4555-b4f6-4f03a0f0d47e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c6df43e0-dae1-47be-a147-a1bde5aa06de' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c6df43e0-dae1-47be-a147-a1bde5aa06de' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
+       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-e25ddfd4-0066-4f42-86f9-cf31cc2f04c0' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e25ddfd4-0066-4f42-86f9-cf31cc2f04c0' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5356c5f0-7a8a-4f2e-8567-d1602ab735bd' class='xr-var-data-in' type='checkbox'><label for='data-5356c5f0-7a8a-4f2e-8567-d1602ab735bd' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-0b27be61-2021-48bd-93af-1a1d9195dccf' class='xr-section-summary-in' type='checkbox'  checked><label for='section-0b27be61-2021-48bd-93af-1a1d9195dccf' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
@@ -874,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9b53329b",
+   "id": "5b80c1f6",
    "metadata": {},
    "outputs": [
     {
@@ -921,13 +920,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4521b893",
+   "id": "cc695216",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7feb270578e0>"
+       "<matplotlib.collections.QuadMesh at 0x7f7a5ad10970>"
       ]
      },
      "execution_count": 14,
@@ -955,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6794fdd8",
+   "id": "4a660483",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d1173b67",
+   "id": "c191d3b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40509fb5",
+   "id": "dd8557fb",
    "metadata": {},
    "outputs": [],
    "source": []
