Convert strings to paths in dataclasses

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c8b7a748",
+   "id": "0f9b19c3",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9bfa077",
+   "id": "48ff8ec2",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "250ee95d",
+   "id": "712abab5",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "568bf2a8",
+   "id": "f6564f4b",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a377ddff",
+   "id": "11338483",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b3833319",
+   "id": "7d5b6980",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,6 @@
     }
    ],
    "source": [
-    "from pathlib import Path\n",
     "import ewatercycle.models\n",
     "ewatercycle.models.Wflow.available_versions"
    ]
@@ -105,13 +104,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4c354ca3",
+   "id": "1f22bfa0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "WflowParameterSet(input_data=PosixPath('wflow_example_case_nc'), default_config=PosixPath('wflow_example_case_nc/wflow_sbm_NC.ini'))"
+       "WflowParameterSet(input_data=PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_example_case_nc'), default_config=PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_example_case_nc/wflow_sbm_NC.ini'))"
       ]
      },
      "execution_count": 2,
@@ -121,8 +120,8 @@
    ],
    "source": [
     "parameter_set = ewatercycle.models.wflow.WflowParameterSet(\n",
-    "    input_data = Path(\"./wflow_example_case_nc/\"),\n",
-    "    default_config = Path(\"./wflow_example_case_nc/wflow_sbm_NC.ini\"),\n",
+    "    input_data = \"./wflow_example_case_nc/\",\n",
+    "    default_config = \"./wflow_example_case_nc/wflow_sbm_NC.ini\",\n",
     ")\n",
     "parameter_set"
    ]
@@ -130,13 +129,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "15b03366",
+   "id": "bf6a25cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "WflowForcing(netcdfinput=PosixPath('../test_forcing_data.nc'), Precipitation='/P', EvapoTranspiration='/PET', Temperature='/TEMP', Inflow=None)"
+       "WflowForcing(netcdfinput=PosixPath('/home/peter/ewatercycle/ewatercycle/test_forcing_data.nc'), Precipitation='/P', EvapoTranspiration='/PET', Temperature='/TEMP', Inflow=None)"
       ]
      },
      "execution_count": 3,
@@ -146,7 +145,7 @@
    ],
    "source": [
     "forcing = ewatercycle.models.wflow.WflowForcing(\n",
-    "    Path('../test_forcing_data.nc'),\n",
+    "    netcdfinput = '../test_forcing_data.nc',\n",
     "    Precipitation = \"/P\", \n",
     "    EvapoTranspiration = \"/PET\", \n",
     "    Temperature = \"/TEMP\",\n",
@@ -157,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b0956d8a",
+   "id": "c61f3c70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ee1eed6c",
+   "id": "1e70d17c",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8dfbbcc4",
+   "id": "9cfe6a0f",
    "metadata": {
     "tags": []
    },
@@ -252,14 +251,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "51c49611",
+   "id": "0ddf8b4e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_153353/wflow_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_153353'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_174908/wflow_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_174908'))"
       ]
      },
      "execution_count": 7,
@@ -274,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9290a3c5",
+   "id": "a6fca2fd",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebe49cf2",
+   "id": "86c56b1c",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -352,13 +351,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aa49b9eb",
+   "id": "d7ddadc3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_153353/wflow_ewatercycle.ini')"
+       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_174908/wflow_ewatercycle.ini')"
       ]
      },
      "execution_count": 9,
@@ -373,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f09319ea",
+   "id": "e14effbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0c651c16",
+   "id": "6029a38e",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2db38bce",
+   "id": "11430870",
    "metadata": {
     "tags": []
    },
@@ -777,13 +776,13 @@
        "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
        "    time       object 1995-01-30 00:00:00\n",
        "Attributes:\n",
-       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-faee66cc-b72c-4ddb-bfa4-b44fb4408ab7' class='xr-array-in' type='checkbox' checked><label for='section-faee66cc-b72c-4ddb-bfa4-b44fb4408ab7' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-04c4a316-cebb-41c5-b018-047c478dd8ab' class='xr-array-in' type='checkbox' checked><label for='section-04c4a316-cebb-41c5-b018-047c478dd8ab' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-1470114a-da1c-45ff-8b5d-0885bdbbb026' class='xr-section-summary-in' type='checkbox'  checked><label for='section-1470114a-da1c-45ff-8b5d-0885bdbbb026' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-f09e7a4f-6d77-44c4-8b65-da91ffeb48fb' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-f09e7a4f-6d77-44c4-8b65-da91ffeb48fb' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-7cc68a45-bf52-4f36-919d-d5c199db5284' class='xr-var-data-in' type='checkbox'><label for='data-7cc68a45-bf52-4f36-919d-d5c199db5284' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-c4cda102-533e-4266-b942-8416ecfe1964' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c4cda102-533e-4266-b942-8416ecfe1964' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-43784e34-f348-4ea4-907d-2b6dce4a1ed1' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-43784e34-f348-4ea4-907d-2b6dce4a1ed1' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e101b3a9-a5e1-4c0e-8d8b-ffd55447f295' class='xr-var-data-in' type='checkbox'><label for='data-e101b3a9-a5e1-4c0e-8d8b-ffd55447f295' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
        "        5.447163,  5.48383 ,  5.520497,  5.557163,  5.59383 ,  5.630497,\n",
        "        5.667163,  5.70383 ,  5.740497,  5.777164,  5.81383 ,  5.850497,\n",
        "        5.887163,  5.92383 ,  5.960497,  5.997163,  6.03383 ,  6.070497,\n",
@@ -814,7 +813,7 @@
        "       11.387163, 11.42383 , 11.460497, 11.497164, 11.53383 , 11.570497,\n",
        "       11.607163, 11.64383 , 11.680496, 11.717163, 11.75383 , 11.790497,\n",
        "       11.827164, 11.86383 , 11.900496, 11.937163, 11.97383 , 12.010497,\n",
-       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-246555ba-5443-4888-ba49-3ff54930f317' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-246555ba-5443-4888-ba49-3ff54930f317' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f8153b85-7dab-494e-b3b3-c159b4bbb012' class='xr-var-data-in' type='checkbox'><label for='data-f8153b85-7dab-494e-b3b3-c159b4bbb012' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
+       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-b0fcd45a-9318-4141-9a31-3625afc4737d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b0fcd45a-9318-4141-9a31-3625afc4737d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-11f45281-47b5-4b60-85b1-3ca92a55ab48' class='xr-var-data-in' type='checkbox'><label for='data-11f45281-47b5-4b60-85b1-3ca92a55ab48' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
        "       46.114265, 46.150932, 46.187599, 46.224266, 46.260933, 46.2976  ,\n",
        "       46.334267, 46.370934, 46.4076  , 46.444267, 46.480934, 46.517601,\n",
        "       46.554268, 46.590935, 46.627602, 46.664268, 46.700932, 46.737598,\n",
@@ -842,7 +841,7 @@
        "       51.394268, 51.430935, 51.467602, 51.504265, 51.540932, 51.577599,\n",
        "       51.614265, 51.650932, 51.687599, 51.724266, 51.760933, 51.7976  ,\n",
        "       51.834267, 51.870934, 51.9076  , 51.944267, 51.980934, 52.017601,\n",
-       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-e25ddfd4-0066-4f42-86f9-cf31cc2f04c0' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e25ddfd4-0066-4f42-86f9-cf31cc2f04c0' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5356c5f0-7a8a-4f2e-8567-d1602ab735bd' class='xr-var-data-in' type='checkbox'><label for='data-5356c5f0-7a8a-4f2e-8567-d1602ab735bd' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-0b27be61-2021-48bd-93af-1a1d9195dccf' class='xr-section-summary-in' type='checkbox'  checked><label for='section-0b27be61-2021-48bd-93af-1a1d9195dccf' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
+       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-1d75fe22-9bf8-4ede-946e-15af8af52783' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-1d75fe22-9bf8-4ede-946e-15af8af52783' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-bd5df0de-4241-4c28-8add-6f4b3c56552e' class='xr-var-data-in' type='checkbox'><label for='data-bd5df0de-4241-4c28-8add-6f4b3c56552e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-ac645fd9-ae93-4672-a613-d13d43736a92' class='xr-section-summary-in' type='checkbox'  checked><label for='section-ac645fd9-ae93-4672-a613-d13d43736a92' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
@@ -873,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5b80c1f6",
+   "id": "b17cb739",
    "metadata": {},
    "outputs": [
     {
@@ -920,13 +919,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cc695216",
+   "id": "8766195d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f7a5ad10970>"
+       "<matplotlib.collections.QuadMesh at 0x7ffaf8cbd700>"
       ]
      },
      "execution_count": 14,
@@ -954,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4a660483",
+   "id": "6dea043f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c191d3b5",
+   "id": "f62687bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd8557fb",
+   "id": "4e48938d",
    "metadata": {},
    "outputs": [],
    "source": []
